<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/popup_screen78">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RequestSend"
            android:id="@+id/tv_title"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/dot_light_screen1"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlepopp_screen78"
            android:id="@+id/tv_author"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="@dimen/btn_w"
            android:layout_height="@dimen/btn_h"
            android:text="@string/backtohome"
            android:id="@+id/backhome"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/tv_author"
            android:layout_centerHorizontal="true"
            android:background="@drawable/change_pass"
            android:gravity="center"
            android:textColor="@color/color_text"
            android:textSize="20sp"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/close_popup"
            android:src="@drawable/close_popup"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>
