<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_welcome">


    <redix.booxtown.autoviewpager.AutoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        />

    <Button
        android:id="@+id/btn_sigup_wellcome"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="175dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:text="@string/SignUp"
        android:background="@drawable/background_signup"
        android:textColor="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/btn_sigin_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="175dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/SignIn"
        android:background="@drawable/background_signup"
        android:textColor="@android:color/holo_blue_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/SignInWith"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@mipmap/fb"/>
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/twetter"/>
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@mipmap/g"/>
    </LinearLayout>
</RelativeLayout>
